Renew the date on the feature card

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <img src="assets/family.svg">
                         <div class="content">
                             <h3>32 Million+</h3>
-                            <p>Registered users as of Feb29, 2024</p>
+                            <p>Registered users as of July18, 2025</p>
                         </div>
                     </div>
                     <div class="feature flex">
